--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Management</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="professional_executive.ico">
+  <link rel="icon" type="image/x-icon" href="../assets/professional_executive.ico">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
