--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,18 @@
 <html lang="pt-br">
 <head>
   <meta charset="utf-8">
-  <title>Management</title>
+  <title>Catch-A-Vet</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="../assets/professional_executive.ico">
+  <link rel="icon" type="image/x-icon" href="../assets/veterinarian.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+  integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+  crossorigin=""/>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+  integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+  crossorigin=""></script>
 </head>
 <body>
   <app-root></app-root>
